--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-<body>
-    
 
+<body>
+    <h1>Login and Sign Up Form</h1>
+    <div class="container">
+
+        <div class=" form-box leftSide">
+            <h2>Sign Up</h2>
+            <input type="text" name="" id="fullName" placeholder="Enter Your Name">
+            <input type="text"  id="signupUser" placeholder="Enter Your Email">
+            <input type="password" name="" id="signupPass" placeholder="Enter Your Password">
+            <input type="password" id="confirmPass" placeholder="Confirm Password ">
+            <button onclick="registration()">Sign Up</button>
+        </div>
+        <div class=" form-box  rightSide">
+          <h2>Sign In</h2>
+          <input type="text"  id="enterUser" placeholder="Enter Email">
+          <input type="password" name="" id="enterPass" placeholder="Enter Password">
+          <input type="password" id="enterconfirmPass" placeholder="Confirm Password ">
+          <button onclick="loginIn()">Login In</button>
+        </div>
+    </div>
 
 
 
     <script src="/assets/script.js"></script>
 </body>
+
 </html>
